[tool.poetry]
name = "onetimesecret"
version = "0.1.0"
description = "This project is an HTTP service designed to create and retrieve one-time secrets, similar to the functionality offered by onetimesecret.com. The service does not require a user interface, operating solely as a JSON API service."
authors = ["pecheritsa <pecheritsa.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.3"
cryptography = "^43.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
